Fix: added align items center to align arrow

--- a/public/styles/backtohome-redirect.css
+++ b/public/styles/backtohome-redirect.css
@@ -2,6 +2,7 @@
     color: var(--black);
     display: flex;
     justify-content: center;
+    align-items: center;
     font-family: var(--secondary-font);
     text-transform: uppercase;
     gap: 0.5em;
